fix some minor layout problem

--- a/homepage.css
+++ b/homepage.css
@@ -78,7 +78,7 @@ section{
 }
 section header{
   text-align: center;
-  padding-top: .5em;
+  padding-top: .3em;
   padding-bottom: .2em;
   color: blue;
 }
